--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
         <div class="social_media_omot">
           <div class="futer_logo">
             <a href="#" id="futer_logo">Boosting Services</a>
+            <a href="assets/docs/documentation.pdf" id="futer_logo">Documentation</a>
           </div>
           <p class="website_rights">
             Boosting Servuces 2020. All rights reserved
